<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EncryptPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/encryptTitle"
        android:text="HashCryptic"
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ciphersBtn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Ciphers"
            app:layout_constraintBottom_toTopOf="@+id/encryptBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.876" />

        <Button
            android:id="@+id/encryptBtn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Hash Encryption"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355" />

        <Button
            android:id="@+id/decryptBtn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Hash Decryption"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/encryptBtn"
            app:layout_constraintVertical_bias="0.072" />

        <Button
            android:id="@+id/encryptFileBtn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Encrypt File"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chksumBtn"
            app:layout_constraintVertical_bias="0.127" />

        <Button
            android:id="@+id/decryptFileBtn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Decrypt File"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/encryptFileBtn"
            app:layout_constraintVertical_bias="0.19" />

        <Button
            android:id="@+id/chksumBtn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Checksum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decryptBtn"
            app:layout_constraintVertical_bias="0.102" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>