<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ciphers">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/encryptTitle"
        android:text="Ciphers"
        android:textAlignment="center"
        android:textColor="@color/darker_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/caesarCiph_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="196dp"
            android:text="Caesar Cipher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/vigenereCiph_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Vigenère Cipher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caesarCiph_btn" />

        <Button
            android:id="@+id/railFenceCiph_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Rail Fence Cipher"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vigenereCiph_btn" />

        <Button
            android:id="@+id/hillCiph_btn"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Hill Cipher"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/railFenceCiph_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>