<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/home"/>
    <item
        android:id="@+id/hashcrypt"
        android:icon="@android:drawable/ic_lock_idle_lock"
        android:title="Hashcrypt" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Profile" />
</menu>