...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/copyencr_txt"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:text="Copy Hash Value"
                android:textSize="10sp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

        </LinearLayout>
        <Button
            android:id="@+id/qrcode_btn"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="QR Code"
            android:textSize="10sp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
